--- a/style/styles.css
+++ b/style/styles.css
@@ -25,40 +25,103 @@ body {
 
 .wrapper {
   border: 1px red solid;
-  height: 100%;
   max-width: 1400px;
   margin: auto;
   display: flex;
   justify-content: space-between;
   padding-top: 5rem;
+  gap: 2rem;
 }
 .wrapper .main {
   width: 70%;
   border: 1px red solid;
+  flex: 3;
 }
 .wrapper .main .title {
   font-size: 4rem;
   font-weight: 700;
+  margin-bottom: 1rem;
 }
-.wrapper .main .product {
+.wrapper .main .menu-items {
   display: grid;
-  display: grid;
-  grid-template-columns: auto auto auto;
-  gap: 0.5rem;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
 }
-.wrapper .main .product .itemCard {
-  border: 1px solid rgba(0, 0, 0, 0.8);
+.wrapper .main .menu-items .menu-item {
+  background-color: #f9f9f9;
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  overflow: hidden;
   text-align: center;
+  transition: transform 0.3s ease;
 }
-.wrapper .main .product .itemCard img {
-  width: 100%;
+.wrapper .main .menu-items .menu-item:hover {
+  transform: translateY(-5px);
 }
-.wrapper .main .product .itemCard .item {
-  font-size: 16px;
+.wrapper .main .menu-items .menu-item picture {
+  display: block;
+  position: relative;
+}
+.wrapper .main .menu-items .menu-item picture .add-to-cart {
+  position: absolute;
+  bottom: -12px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px 20px;
+  background-color: var(--Rose100);
+  border: none;
   font-weight: 600;
-  color: red;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  display: flex;
+  align-items: center;
+  border: 0.5px solid rgba(0, 0, 0, 0.5);
+}
+.wrapper .main .menu-items .menu-item picture .add-to-cart .cart-icon {
+  width: 22px;
+  height: 22px;
+  margin-right: 5px;
+}
+.wrapper .main .menu-items .menu-item picture .add-to-cart:hover {
+  background-color: #ff4500;
+  color: white;
+}
+.wrapper .main .menu-items .menu-item picture img {
+  width: 100%;
+  height: auto;
+}
+.wrapper .main .menu-items .menu-item .item-info {
+  padding: 15px;
+  text-align: left;
+}
+.wrapper .main .menu-items .menu-item .item-info .item-name {
+  font-size: 1.2rem;
+  margin: 10px 0 5px;
+}
+.wrapper .main .menu-items .menu-item .item-info .item-category {
+  color: #999;
+  font-size: 0.9rem;
+}
+.wrapper .main .menu-items .menu-item .item-info .item-price {
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-top: 10px;
+  color: var(--Red);
 }
 .wrapper .cart {
-  width: 30%;
+  background-color: #f4f4f4;
+  padding: 20px;
+  flex: 1;
   border: 1px blue solid;
+  font-size: 2rem;
+  font-weight: 700;
+  color: var(--Red);
+  display: flex;
+  height: auto;
+}
+@media (max-width: 1023px) {
+  .wrapper .cart {
+    display: none;
+  }
 }/*# sourceMappingURL=styles.css.map */
