--- a/style/styles.scss
+++ b/style/styles.scss
@@ -29,7 +29,7 @@ body {
   margin: auto;
   display: flex;
   justify-content: space-between;
-  padding-top: 5rem; // add padding left right when lower screen size
+  padding: 5rem 0; // add padding left right when lower screen size
   gap: 2rem;
   .main {
     width: 70%;
@@ -121,6 +121,10 @@ body {
     @media (max-width: 1023px) {
       // Hide cart on smaller screens
       display: none;
+    }
+    #cartItemsCount {
+      font-size: 2rem;
+      font-weight: 700;
     }
   }
 }
