--- a/style/styles.css
+++ b/style/styles.css
@@ -110,15 +110,16 @@ body {
   color: var(--Red);
 }
 .wrapper .cart {
-  background-color: #f4f4f4;
+  background-color: white;
   padding: 20px;
   flex: 1;
   border: 1px blue solid;
   font-size: 2rem;
   font-weight: 700;
   color: var(--Red);
-  display: flex;
-  height: auto;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 @media (max-width: 1023px) {
   .wrapper .cart {
@@ -127,5 +128,13 @@ body {
 }
 .wrapper .cart #cartItemsCount {
   font-size: 2rem;
+  border: 1px blue solid;
   font-weight: 700;
+}
+.wrapper .cart #cartItems {
+  border: 1px red solid;
+  display: flex;
+}
+.wrapper .cart #cartItems img {
+  margin: 0 auto;
 }/*# sourceMappingURL=styles.css.map */
