--- a/style/styles.scss
+++ b/style/styles.scss
@@ -29,7 +29,7 @@ body {
   margin: auto;
   display: flex;
   justify-content: space-between;
-  padding: 5rem 0; // add padding left right when lower screen size
+  padding: 5rem 0; 
   gap: 2rem;
   .main {
     width: 70%;
@@ -56,11 +56,11 @@ body {
         }
         picture {
           display: block;
-          position: relative; // Position relative to the button
+          position: relative; 
           .add-to-cart {
             position: absolute;
-            bottom: -12px; // 15px from the bottom of the image area
-            left: 50%; // Center it horizontally
+            bottom: -12px; 
+            left: 50%; 
             transform: translateX(-50%);
             padding: 10px 20px;
             background-color: var(--Rose100);
@@ -69,13 +69,13 @@ body {
             border-radius: 20px;
             cursor: pointer;
             transition: background-color 0.3s ease;
-            display: flex; // Use flexbox to align items
-            align-items: center; // Center items vertically
-            border: 0.5px solid rgba(0, 0, 0, 0.5); // Thinner than 1px
+            display: flex; 
+            align-items: center; 
+            border: 0.5px solid rgba(0, 0, 0, 0.5); 
             .cart-icon {
-              width: 22px; // Increase size as needed
-              height: 22px; // Increase size as needed
-              margin-right: 5px; // Space between icon and text
+              width: 22px;
+              height: 22px; 
+              margin-right: 5px; 
             }
             &:hover {
               background-color: #ff4500;
