--- a/style/styles.css
+++ b/style/styles.css
@@ -63,40 +63,14 @@ body {
   overflow: hidden;
   text-align: center;
   transition: transform 0.3s ease;
+  display: block;
+  position: relative;
 }
 .wrapper .main .menu-items .menu-item:hover {
   transform: translateY(-5px);
 }
-.wrapper .main .menu-items .menu-item picture {
-  display: block;
-  position: relative;
-}
-.wrapper .main .menu-items .menu-item picture .add-to-cart {
-  position: absolute;
-  bottom: -12px;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 10px 20px;
-  background-color: var(--Rose100);
-  border: none;
-  font-weight: 600;
-  border-radius: 20px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  display: flex;
-  align-items: center;
-  border: 0.5px solid rgba(0, 0, 0, 0.5);
-}
-.wrapper .main .menu-items .menu-item picture .add-to-cart .cart-icon {
-  width: 22px;
-  height: 22px;
-  margin-right: 5px;
-}
-.wrapper .main .menu-items .menu-item picture .add-to-cart:hover {
-  background-color: #ff4500;
-  color: white;
-}
 .wrapper .main .menu-items .menu-item picture img {
+  border: 1px solid blue;
   width: 100%;
   height: auto;
 }
@@ -117,6 +91,54 @@ body {
   font-weight: bold;
   margin-top: 10px;
   color: var(--Red);
+}
+.wrapper .main .menu-items .menu-item .add-to-cart {
+  position: absolute;
+  bottom: 100px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px 20px;
+  background-color: var(--Rose100);
+  border: none;
+  font-weight: 600;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  display: flex;
+  align-items: center;
+  border: 0.5px solid rgba(0, 0, 0, 0.5);
+}
+.wrapper .main .menu-items .menu-item .add-to-cart .cart-icon {
+  width: 22px;
+  height: 22px;
+  margin-right: 5px;
+}
+.wrapper .main .menu-items .menu-item .quantity-control {
+  position: absolute;
+  bottom: 100px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: var(--Red);
+  border: none;
+  font-weight: 600;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  display: flex;
+  align-items: center;
+  border: 0.5px solid rgba(0, 0, 0, 0.5);
+  padding: 10px 20px;
+}
+.wrapper .main .menu-items .menu-item .quantity-control button {
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  font-weight: 600;
+}
+.wrapper .main .menu-items .menu-item .quantity-control .quantity {
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 0 10px;
 }
 .wrapper .cart {
   background-color: white;
