--- a/style/styles.scss
+++ b/style/styles.scss
@@ -23,7 +23,6 @@ body {
 }
 
 .wrapper {
-  border: 1px red solid;
   max-width: 1400px;
   margin: auto;
   display: flex;
@@ -38,7 +37,6 @@ body {
   }
   .main {
     width: 70%;
-    border: 1px red solid;
     flex: 3;
     .title {
       font-size: 4rem;
@@ -51,13 +49,14 @@ body {
       gap: 20px;
       .menu-item {
         background-color: #f9f9f9;
-        border: 1px solid red;
         border-radius: 8px;
         overflow: hidden;
         text-align: center;
         transition: transform 0.3s ease;
         display: block;
         position: relative;
+        box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+          rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
         &:hover {
           transform: translateY(-5px);
         }
@@ -67,6 +66,7 @@ body {
             width: 100%;
             height: auto;
             box-sizing: border-box;
+            border-radius: 10px;
           }
         }
         .item-info {
@@ -121,22 +121,24 @@ body {
           background-color: var(--Red);
           display: flex;
           align-items: center;
-          border-radius: 20px;
+          border-radius: 50px;
           border: 0.5px solid rgba(0, 0, 0, 0.5);
           padding: 10px;
           gap: 2rem;
           color: white;
           width: 150px;
           height: 50px;
+
           button {
-            width: 30px;
-            height: 30px;
+            width: 20px;
+            height: 20px;
             border: none;
             border-radius: 50%;
             font-weight: 600;
             color: white;
             background-color: var(--Red);
             border: 0.5px solid white;
+            line-height: 1; /* Ensure line height doesn't affect centering */
           }
           .quantity {
             font-size: 1rem;
@@ -152,7 +154,6 @@ body {
     background-color: white;
     padding: 20px;
     flex: 1;
-    border: 1px blue solid;
     font-size: 2rem;
     font-weight: 700;
     color: var(--Red);
@@ -164,11 +165,9 @@ body {
     }
     #cartItemsCount {
       font-size: 2rem;
-      border: 1px blue solid;
       font-weight: 700;
     }
     #cartItems {
-      border: 1px red solid;
       display: flex; /* Use flex for layout */
       flex-direction: column; /* Stack items vertically */
       gap: 10px; /* Space between items */
@@ -178,14 +177,16 @@ body {
       }
       .cart-item-element {
         background-color: #f9f9f9;
-        border: 1px solid blue;
         padding: 15px;
         border-radius: 5px;
         margin-bottom: 10px;
+        box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+          rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
         .cart-item {
           display: flex; /* Use flexbox */
           justify-content: space-between; /* Space items evenly */
           align-items: center; /* Center items vertically */
+
           .cart-item-prices {
             font-weight: 600;
             color: var(--Rose400);
