--- a/style/styles.css
+++ b/style/styles.css
@@ -29,6 +29,7 @@ body {
   justify-content: space-between;
   padding: 5rem 0;
   gap: 2rem;
+  border: 1px solid blue;
 }
 @media (max-width: 1400px) {
   .wrapper {
@@ -37,7 +38,7 @@ body {
 }
 @media (max-width: 600px) {
   .wrapper {
-    margin: 0;
+    margin: 0 1rem;
   }
 }
 .wrapper .main {
