--- a/style/styles.scss
+++ b/style/styles.scss
@@ -29,11 +29,13 @@ body {
   justify-content: space-between;
   padding: 5rem 0;
   gap: 2rem;
+  border: 1px solid blue;
+
   @media (max-width: 1400px) {
     margin: 0 3rem;
   }
   @media (max-width: 600px) {
-    margin: 0;
+    margin: 0 1rem;
   }
   .main {
     width: 70%;
