--- a/style/styles.scss
+++ b/style/styles.scss
@@ -39,7 +39,6 @@ body {
   @media (max-width: 600px) {
     margin: 0 2rem;
     padding: 3rem 0;
- 
   }
   .main {
     width: 70%;
@@ -180,13 +179,13 @@ body {
     color: var(--Red);
     height: fit-content;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
-    rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+      rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 
     // @media (max-width: 1000px) {
     //   // Hide cart on smaller screens
     //   // display: none;
     //   // margin: 0 5.5rem;
-     
+
     // }
     #cartItemsCount {
       font-size: 2rem;
@@ -236,10 +235,31 @@ body {
           }
         }
       }
-      .total-order {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+    }
+    .total-order {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .carbon-neutral {
+      font-weight: normal;
+      display: flex;
+      background-color: var(--Rose100);
+      padding: 1rem;
+      border-radius: 10px;
+      margin-top: 1rem;
+    }
+    .confirm-order {
+      border-radius: 50px;
+      width: 100%;
+      margin: 0.5rem 0;
+      button {
+        padding: 1rem;
+        background-color: var(--Red);
+        color: whitesmoke;
+        font-weight: 500;
+        outline: none;
+        border: none;
       }
     }
   }
