--- a/style/styles.scss
+++ b/style/styles.scss
@@ -236,6 +236,10 @@ body {
         }
       }
     }
+    #emptyCartImg {
+      display: flex;
+      margin: 0 auto;
+    }
     .total-order {
       display: flex;
       justify-content: space-between;
