--- a/style/styles.css
+++ b/style/styles.css
@@ -250,16 +250,45 @@ body {
   border-radius: 10px;
   margin-top: 1rem;
 }
-.wrapper .cart .confirm-order {
+.wrapper .cart #confirmOrderBtn {
   border-radius: 50px;
   width: 100%;
   margin: 0.5rem 0;
-}
-.wrapper .cart .confirm-order button {
   padding: 1rem;
   background-color: var(--Red);
   color: whitesmoke;
   font-weight: 500;
   outline: none;
   border: none;
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1000; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(0, 0, 0, 0.5); /* Black w/ opacity */
+}
+.modal .modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+.modal .modal-content .close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.modal .modal-content .close .close:hover,
+.modal .modal-content .close .close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }/*# sourceMappingURL=styles.css.map */
