--- a/style/styles.scss
+++ b/style/styles.scss
@@ -253,17 +253,47 @@ body {
       border-radius: 10px;
       margin-top: 1rem;
     }
-    .confirm-order {
+
+    #confirmOrderBtn {
       border-radius: 50px;
       width: 100%;
       margin: 0.5rem 0;
-      button {
-        padding: 1rem;
-        background-color: var(--Red);
-        color: whitesmoke;
-        font-weight: 500;
-        outline: none;
-        border: none;
+      padding: 1rem;
+      background-color: var(--Red);
+      color: whitesmoke;
+      font-weight: 500;
+      outline: none;
+      border: none;
+    }
+  }
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1000; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(0, 0, 0, 0.5); /* Black w/ opacity */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+      .close:hover,
+      .close:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
       }
     }
   }
