--- a/style/styles.css
+++ b/style/styles.css
@@ -276,9 +276,9 @@ body {
 .modal .modal-content {
   background-color: #fefefe;
   margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
+  padding: 3rem;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 40%; /* Could be more or less, depending on screen size */
 }
 .modal .modal-content .close {
   color: #aaa;
@@ -291,4 +291,22 @@ body {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+.modal .modal-content .order-confirmed-label {
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+.modal .modal-content .enjoy-label {
+  color: #888;
+}
+.modal .modal-content .start-new-order-btn {
+  border-radius: 50px;
+  width: 100%;
+  margin: 0.5rem 0;
+  padding: 1rem;
+  background-color: var(--Red);
+  color: whitesmoke;
+  font-weight: 500;
+  outline: none;
+  border: none;
 }/*# sourceMappingURL=styles.css.map */
