fix modal design, add ing img is the only developmrnt needed in modal and reatin button when refresh the website

--- a/style/styles.css
+++ b/style/styles.css
@@ -260,6 +260,10 @@ body {
   font-weight: 500;
   outline: none;
   border: none;
+  cursor: pointer;
+}
+.wrapper .cart #confirmOrderBtn:hover {
+  background-color: hsl(14deg, 86%, 47%);
 }
 
 .modal {
@@ -286,8 +290,7 @@ body {
   font-size: 28px;
   font-weight: bold;
 }
-.modal .modal-content .close .close:hover,
-.modal .modal-content .close .close:focus {
+.modal .modal-content .close:hover, .modal .modal-content .close:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
@@ -300,7 +303,6 @@ body {
   color: #888;
 }
 .modal .modal-content #modalCartItems {
-  border: 1px red solid;
   margin: 1rem 0 0 0;
   background-color: var(--Rose100);
 }
@@ -345,4 +347,8 @@ body {
   font-weight: 500;
   outline: none;
   border: none;
+  cursor: pointer;
+}
+.modal .modal-content .start-new-order-btn:hover {
+  background-color: hsl(14deg, 86%, 47%);
 }/*# sourceMappingURL=styles.css.map */
