--- a/style/styles.scss
+++ b/style/styles.scss
@@ -210,7 +210,6 @@ body {
           display: flex; /* Use flexbox */
           justify-content: space-between; /* Space items evenly */
           align-items: center; /* Center items vertically */
-
           .cart-item-prices {
             font-weight: 600;
             color: var(--Rose400);
@@ -264,6 +263,10 @@ body {
       font-weight: 500;
       outline: none;
       border: none;
+      cursor: pointer;
+      &:hover {
+        background-color: hsl(14, 86%, 47%);
+      }
     }
   }
 }
@@ -289,8 +292,8 @@ body {
       float: right;
       font-size: 28px;
       font-weight: bold;
-      .close:hover,
-      .close:focus {
+      &:hover,
+      &:focus {
         color: black;
         text-decoration: none;
         cursor: pointer;
@@ -304,8 +307,6 @@ body {
       color: #888;
     }
     #modalCartItems {
-      border: 1px red solid;
-      // border-radius: 10px;
       margin: 1rem 0 0 0;
       background-color: var(--Rose100);
       .modal-item-container {
@@ -354,6 +355,10 @@ body {
       font-weight: 500;
       outline: none;
       border: none;
+      cursor: pointer;
+      &:hover {
+        background-color: hsl(14, 86%, 47%);
+      }
     }
   }
 }
